fixed flex style on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -134,8 +134,8 @@ li a {
 }
 
 .flex-container {
-	margin: 2.5em auto;
-	width: 100%;
+	padding: 2.5em 1.5em;
+	max-width: 80em;
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
@@ -144,8 +144,8 @@ li a {
 .circle {
 	max-width: 20em;
 	max-height: 20em;
-	min-width: 16em;
-	min-height: 16em;
+	min-width: 12em;
+	min-height: 12em;
 	padding: 1em 0.5em;
 	border: 1px  solid #000;
 	border-radius: 50%;
@@ -153,7 +153,7 @@ li a {
 	float: left;
 	text-align: center;
 	display: table;
-	flex: 0 1;
+	flex: 1 0 auto;
 }
 
 .circle p {
@@ -168,7 +168,7 @@ li a {
 }
 
 #sponsors_div {
-	padding: 4em 0;
+	padding: 4em 1em;
 	background-color: #F2F2F2;
 }
 
